# btask

./: .gitignore  README.md  pyproject.toml
src/btask/: __init__.py  __main__.py  app.py  btask.css  btask.tcss  config.py
src/btask/widgets/: __init__.py  add_kit_dialog.py  add_project_dialog.py  admin_dialog.py  archive_project_dialog.py  archived_projects_screen.py  confirm_dialog.py  delete_project_dialog.py  edit_kit_dialog.py  pd_menu.py  pin_prompt.py  project_details.py  sidebar.py
